src/objects/FC_Billing_Instruction_Set__c.object
<CustomObject>
    <fields>
        <fullName>Amend_Step_Count__c</fullName>
        <label>Amend Step Count</label>
        <summaryFilterItems>
            <field>FC_Billing_Instruction_Step__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Amend - Add, Amend - Modify, Amend - Remove</value>
        </summaryFilterItems>
        <summaryForeignKey>FC_Billing_Instruction_Step__c.Billing_Instruction_Set__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Charge_Effective_Start_Date__c</fullName>
        <formula>Charge__r.Zuora__EffectiveStartDate__c</formula>
        <label>Charge Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Charge_Number__c</fullName>
        <label>Charge Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charge</label>
        <referenceTo>Zuora__SubscriptionProductCharge__c</referenceTo>
        <relationshipLabel>(FC) Billing Instruction Sets</relationshipLabel>
        <relationshipName>FC_Billing_Instruction_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Instruction_Parameters__c</fullName>
        <label>Instruction Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Item_ID__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity Line Item ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Item_UUID__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity Line Item UUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>(FC) Billing Instruction Sets</relationshipLabel>
        <relationshipName>FC_Billing_Instruction_Sets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subscribe_Step_Count__c</fullName>
        <label>Subscribe Step Count</label>
        <summaryFilterItems>
            <field>FC_Billing_Instruction_Step__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Subscribe</value>
        </summaryFilterItems>
        <summaryForeignKey>FC_Billing_Instruction_Step__c.Billing_Instruction_Set__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <formula>Charge__r.Zuora__Subscription__r.Zuora__SubscriptionStartDate__c</formula>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>FC_Billing_Instruction_Template__c</referenceTo>
        <relationshipLabel>(FC) Billing Instruction Sets</relationshipLabel>
        <relationshipName>FC_Billing_Instruction_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>(FC) Billing Instruction Set</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>(FC) Billing Instruction Set Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>(FC) Billing Instruction Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>